examples/test/testpolicy19096.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19096
  namespace: namespace461
spec:
  podSelector:
    matchLabels:
      key40: value40
      key6: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value19
      podSelector:
        matchLabels:
          key33: value10
          key43: value31
